# fetch-market-binance

./: README.md  api-p2p-binance.py  appdata  cron-tab-script.sh  example.db  pyproject.toml  test.txt
binace-source/: BTC-USD.csv  api-p2p-binance.py  appdata  example.db  log_helper.py  pyproject.toml
binace-source/tests/: test_binace_source.py
